mx8 soms: setup default wallpaper for weston desktop
imx8m-var-dart, imx8mm-var-dart, imx8qxp-var-som:
- weston.ini: add default wallpaper to weston desktop

Signed-off-by: Harshesh Valera <harshesh.v@variscite.com>

--- a/variscite/imx8mm-var-dart/weston.ini
+++ b/variscite/imx8mm-var-dart/weston.ini
@@ -22,3 +22,7 @@ touchscreen_calibrator=true
 
 [screen-share]
 command=/usr/bin/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize
+
+[shell]
+background-image=/usr/share/images/desktop-base/default
+background-type=scale-crop
