--- a/variscite/imx8m-var-dart/weston.ini
+++ b/variscite/imx8m-var-dart/weston.ini
@@ -14,6 +14,8 @@ touchscreen_calibrator=true
 
 [shell]
 size=1920x1080
+background-image=/usr/share/images/desktop-base/default
+background-type=scale-crop
 
 #[output]
 #name=HDMI-A-2
