--- a/variscite/imx8qm-var-som/variscite-wifi.conf
+++ b/variscite/imx8qm-var-som/variscite-wifi.conf
@@ -1,6 +1,6 @@
 WIFI_EN_GPIO=31
 BT_EN_GPIO=30
 BT_BUF_GPIO=154
-WIFI_MMC_HOST=5b030000.usdhc
+WIFI_MMC_HOST=5b030000.mmc
 WIFI_SDIO_ID_FILE=/sys/bus/mmc/devices/mmc2:0001/mmc2:0001:1/device
 WIFI_5G_SDIO_ID=0x4339
