--- a/variscite/x11_resources/pulseaudio/pulseaudio.service
+++ b/variscite/x11_resources/pulseaudio/pulseaudio.service
@@ -3,7 +3,7 @@ Description=PulseAudio system server
 
 [Service]
 Type=forking
-PIDFile=/var/run/pulse/pid
+PIDFile=/run/pulse/pid
 ExecStart=/usr/bin/pulseaudio --system --disallow-exit --disable-shm --exit-idle-time=-1 --daemonize
 
 [Install]
