imx6ul-var-dart, var-som-mx7: Update pulseaudio.service
- Fix typo in the service type
- Fix systemd error for pulseaudio

Signed-off-by: Harshesh Valera <harshesh.v@variscite.com>

--- a/variscite/x11_resources/pulseaudio/pulseaudio.service
+++ b/variscite/x11_resources/pulseaudio/pulseaudio.service
@@ -2,8 +2,8 @@
 Description=PulseAudio system server
 
 [Service]
-Type=fork
-PIDFile=/var/run/pulse/pid
+Type=forking
+PIDFile=/run/pulse/pid
 ExecStart=/usr/bin/pulseaudio --system --disallow-exit --disable-shm --exit-idle-time=-1 --daemonize
 
 [Install]
