dart-imx6ul, var-som-mx7: Use volatile for journald
Limit journald for 5MB max usage and journald file size

Signed-off-by: Harshesh Valera <harshesh.v@variscite.com>

--- a/variscite/x11_resources/journald.conf
+++ b/variscite/x11_resources/journald.conf
@@ -19,9 +19,9 @@ Storage=volatile
 #SyncIntervalSec=5m
 #RateLimitIntervalSec=30s
 #RateLimitBurst=10000
-#SystemMaxUse=
+SystemMaxUse=5M
 #SystemKeepFree=
-#SystemMaxFileSize=
+SystemMaxFileSize=5M
 #SystemMaxFiles=100
 #RuntimeMaxUse=
 #RuntimeKeepFree=
