--- a/variscite/variscite-wifi.service
+++ b/variscite/variscite-wifi.service
@@ -7,7 +7,7 @@ After=sysinit.target
 Type=oneshot
 RemainAfterExit=yes
 ExecStart=/etc/wifi/variscite-wifi start
-ExecStop=/etc/wifi/variscite-wifi stop
+#ExecStop=/etc/wifi/variscite-wifi stop
 
 [Install]
 WantedBy=network.target
