imx8mq-var-dart: Align wifi script to dunfell

--- a/variscite/imx8mq-var-dart/variscite-wifi.conf
+++ b/variscite/imx8mq-var-dart/variscite-wifi.conf
@@ -1,8 +1,7 @@
-WIFI_VSEL_GPIO=4
 WIFI_PWR_GPIO=8
 WIFI_EN_GPIO=66
 BT_BUF_GPIO=133
 BT_EN_GPIO=68
-WIFI_MMC_HOST=30b50000.usdhc
+WIFI_MMC_HOST=30b50000.mmc
 WIFI_SDIO_ID_FILE=/sys/bus/mmc/devices/mmc1:0001/mmc1:0001:1/device
 WIFI_5G_SDIO_ID=0x4339
