--- a/variscite/imx8mp-var-dart/weston.ini
+++ b/variscite/imx8mp-var-dart/weston.ini
@@ -29,3 +29,7 @@ touchscreen_calibrator=true
 
 [screen-share]
 command=@bindir@/weston --backend=rdp-backend.so --shell=fullscreen-shell.so --no-clients-resize
+
+[shell]
+background-image=/usr/share/images/desktop-base/default
+background-type=scale-crop
