imx8mp-var-dart: Update alsa-libs
- Align NXP Yocto aliases and support for AK4458 and CS4288 codecs

Signed-off-by: Harshesh Valera <harshesh.v@variscite.com>

--- a/variscite/imx8mp-var-dart/alsa-libs/aliases.conf
+++ b/variscite/imx8mp-var-dart/alsa-libs/aliases.conf
@@ -57,7 +57,9 @@ CMI8786 cards.CMI8788
 CMI8787 cards.CMI8788
 pistachio cards.pistachio-card
 VC4-HDMI cards.vc4-hdmi
+imx-cs42888 cards.CS42888
 imx-hdmi-soc cards.IMX-HDMI
+ak4458-audio cards.AK4458
 imx-audio-xcvr cards.IMX-XCVR
 <confdir:pcm/default.conf>
 <confdir:pcm/dmix.conf>
